fix: Adjusted font size and letter spacing for intro-loader name on small devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -989,7 +989,7 @@ img {
 @media screen and (max-width: 320px) {
   .intro-loader .name{
     font-size: clamp(1rem, 8vw, 1rem);
-    letter-spacing:3px;
+    letter-spacing:1px;
   }
 
   .container {
